@@ -1,8 +1,11 @@
 # ChangeLog for games-arcade/gdash
-# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
-*gdash-20130427 (20 mar 2015)
+*gdash-20130427 (11 apr 2016)
+
+  11 apr 2016; Vincent Hardy <vincent.hardy.be@gmail.com> :
+  Remove deprecated games eclass
 
   20 mar 2015; Vincent Hardy <vincent.hardy.be@gmail.com> :
   Use bitbucket as SRC_URI and add ~arm keyword
